fixed overlap of divs in mobile

--- a/src/containers/Portfolio.css
+++ b/src/containers/Portfolio.css
@@ -15,11 +15,22 @@ body {
 
 .container {
   display: flex;
-  height: 100vh;
+  height: 100%;
   justify-content: space-evenly;
   align-content: center;
   flex-wrap: wrap;
 }
+
+@media only screen and (min-width: 800px) {
+  .container {
+    display: flex;
+    height: 100vh;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-wrap: wrap;
+  }
+}
+
 .project-card {
   margin: 10px;
   background-color: #fff;
@@ -27,7 +38,7 @@ body {
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   width: 300px;
-  max-height: 550px;
+  height: 550px;
 }
 .card-header img {
   width: 100%;
